Don't crash when missing a type in a Diagnostic message. Print an empty string for the missing type.

Resolves SR-12460